[package]

name = "pistoncore-glutin_window"
version = "0.30.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["glutin", "window", "piston"]
description = "A Piston window back-end using the Glutin library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/glutin_window.git"
homepage = "https://github.com/pistondevelopers/glutin_window"

[lib]

name = "glutin_window"
path = "src/lib.rs"

[dependencies]
gl = "0.6.0"
#glutin = "0.6.1"
#glutin = {path = 'D:\projects\forks\glutin'}
glutin = {git = 'https://github.com/Boscop/glutin'}
#pistoncore-input = "0.14.0"
#pistoncore-input = {path = 'D:\projects\forks\piston\src\input'}
pistoncore-input = {git = 'https://github.com/Boscop/piston'}
#pistoncore-window = "0.22.0"
#pistoncore-window = {path = 'D:\projects\forks\piston\src\window'}
pistoncore-window = {git = 'https://github.com/Boscop/piston'}
shader_version = "0.2.1"
